<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.latebloomers.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark"
            android:padding="20dp">

            <TextView
                style="@style/welcome_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/header"
            style="@style/header_text_view"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/header_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/text_question_number1"
                    style="@style/question_number_header"
                    android:text="@string/question_number1" />

                <TextView
                    android:id="@+id/text_question_content1"
                    style="@style/question_content"
                    android:text="@string/question_content1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/images"
                        android:src="@drawable/vera_wang" />

                    <RadioGroup
                        android:id="@+id/radiogroup_1"
                        style="@style/radio_button_view">

                        <RadioButton
                            android:id="@+id/radio_button_q1_correct"
                            style="@style/radio_buttons"
                            android:text="@string/radio_button_q1" />

                        <RadioButton
                            style="@style/radio_buttons"
                            android:text="@string/radio_button_33" />

                        <RadioButton
                            style="@style/radio_buttons"
                            android:text="@string/radio_button_46" />


                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/text_question_number2"
                    style="@style/question_number_header"
                    android:text="@string/question_number2" />

                <TextView
                    android:id="@+id/text_question_content2"
                    style="@style/question_content"
                    android:text="@string/question_content2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/images"
                        android:src="@drawable/charles_darwin" />

                    <RadioGroup
                        android:id="@+id/radiogroup_2"
                        style="@style/radio_button_view">


                        <RadioButton
                            style="@style/radio_buttons"
                            android:text="@string/radio_button_55" />
                        <RadioButton
                            android:id="@+id/radio_button_q2_correct"
                            style="@style/radio_buttons"
                            android:text="@string/radio_button_q2" />

                        <RadioButton
                            style="@style/radio_buttons"
                            android:text="@string/radio_button_35" />


                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/text_question_number3"
                    style="@style/question_number_header"
                    android:text="@string/question_number3" />

                <TextView
                    android:id="@+id/text_question_content3"
                    style="@style/question_content"
                    android:text="@string/question_content3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/images"
                        android:src="@drawable/reid_hoffman" />

                    <RadioGroup
                        android:id="@+id/radiogroup_3"
                        style="@style/radio_button_view">

                        <RadioButton
                            android:id="@+id/radio_button_q3_correct"
                            style="@style/radio_buttons"
                            android:text="@string/radio_button_q3" />

                        <RadioButton
                            style="@style/radio_buttons"
                            android:text="@string/radio_button_27" />

                        <RadioButton
                            style="@style/radio_buttons"
                            android:text="@string/radio_button_39" />


                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/text_question_number4"
                    style="@style/question_number_header"
                    android:text="@string/question_number4" />

                <TextView
                    android:id="@+id/text_question_content4"
                    style="@style/question_content"
                    android:text="@string/question_content4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/images"
                        android:src="@drawable/fauja_singh" />

                    <RadioGroup
                        android:id="@+id/radiogroup_4"
                        style="@style/radio_button_view">

                        <RadioButton
                            android:id="@+id/radio_button_q4_correct"
                            style="@style/radio_buttons"
                            android:text="@string/radio_button_q4" />

                        <RadioButton
                            style="@style/radio_buttons"
                            android:text="@string/radio_button_55" />

                        <RadioButton
                            style="@style/radio_buttons"
                            android:text="@string/radio_button_62" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/text_question_number5"
                    style="@style/question_number_header"
                    android:text="@string/question_number5" />

                <TextView
                    android:id="@+id/text_question_content5"
                    style="@style/question_content"
                    android:text="@string/question_content5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/images"
                        android:src="@drawable/edmond_hoyle" />

                    <RadioGroup
                        android:id="@+id/radiogroup_5"
                        style="@style/radio_button_view">

                        <RadioButton
                            style="@style/radio_buttons"
                            android:text="@string/radio_button_28" />

                        <RadioButton
                            android:id="@+id/radio_button_q5_correct"
                            style="@style/radio_buttons"
                            android:text="@string/radio_button_q5" />

                        <RadioButton
                            style="@style/radio_buttons"
                            android:text="@string/radio_button_46" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/text_question_number6"
                    style="@style/question_number_header"
                    android:text="@string/question_number6" />

                <TextView
                    android:id="@+id/text_question_content6"
                    style="@style/question_content"
                    android:text="@string/question_content6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/images"
                        android:layout_weight="1"
                        android:src="@drawable/harrison_ford" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkbox_correct1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/checkbox_1" />

                        <CheckBox
                            android:id="@+id/checkbox_correct2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/checkbox_2" />

                        <CheckBox
                            android:id="@+id/checkbox_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/checkbox_3" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/text_question_number7"
                    style="@style/question_number_header"
                    android:text="@string/question_number7" />

                <TextView
                    android:id="@+id/text_question_content7"
                    style="@style/question_content"
                    android:text="@string/question_content7" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/images"
                        android:src="@drawable/colonel_sanders" />


                    <EditText
                        android:id="@+id/editable_q7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Hint: It has only 3 letters"
                        android:inputType="textCapCharacters" />


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/text_results_header"
            style="@style/question_number_header"
            android:layout_height="5dp" />
        <TextView
            android:id="@+id/results_text_view"
            style="@style/results_text_view"
            android:text="@string/results_text" />

        <TextView
            android:id="@+id/text_results_bottom"
            style="@style/question_number_header"
            android:layout_height="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_submit"
                style="@style/buttons"
                android:onClick="submitScores"
                android:text="@string/button_submit" />

            <Button
                android:id="@+id/button_reset"
                style="@style/buttons"
                android:onClick="resetScores"
                android:text="@string/button_reset" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>


